Closed Bug 555702 Opened 14 years ago Closed 14 years ago

nsCSSExpandedDataBlock::DoExpand null checks aBlock instead of *aBlock

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla1.9.3a5

People

(Reporter: timeless, Assigned: timeless)

References

(Blocks 1 open bug, )

Details

(Keywords: coverity)

Attachments

(1 file)

591 nsCSSExpandedDataBlock::DoExpand(nsRefPtr<nsCSSCompressedDataBlock> *aBlock,

599         *aBlock = (*aBlock)->Clone();
600         if (!aBlock) {
601             // Not much we can do; just lose the properties.
602             NS_WARNING("out of memory");
Attached patch fix null checkSplinter Review
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #435599 - Flags: review?(bzbarsky)
Comment on attachment 435599 [details] [diff] [review]
fix null check

r=dbaron
Attachment #435599 - Flags: review?(bzbarsky) → review+
http://hg.mozilla.org/mozilla-central/rev/e0223cca9d88
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a5
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: