Bug 555702 - nsCSSExpandedDataBlock::DoExpand null checks aBlock instead of *aBlock, r=dbaron

--HG--
extra : rebase_source : a1d1ab6b36f02edbafa36e743ec846f69b84da66